--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "software-markets"
+name = "pull_api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
