--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hotwired/turbo-rails": "^8.0.12",
     "@rails/actioncable": "^8.0.100",
     "@tailwindcss/cli": "^4.0.8",
+    "async-mutex": "^0.5.0",
     "autoprefixer": "^10.4.21",
     "lucide": "^0.484.0",
     "playwright": "^1.50.1",
