--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "httpx>=0.28.1",
+    "ipdb>=0.13.13",
+    "pillow>=11.2.1",
+    "requests>=2.32.3",
     "torch>=2.6.0",
     "transformers>=4.49.0",
+    "ultralytics>=8.3.111",
 ]
