--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.28.1",
     "ipdb>=0.13.13",
+    "numpy>=2.1.1",
     "pillow>=11.2.1",
     "requests>=2.32.3",
     "torch>=2.6.0",
