--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@rails/actioncable": "^8.0.100",
+    "@rails/actiontext": "^8.0.200",
     "@tailwindcss/cli": "^4.0.8",
     "async-mutex": "^0.5.0",
     "autoprefixer": "^10.4.21",
@@ -25,6 +26,7 @@
     "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.0.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "trix": "^2.1.14"
   }
 }
